--- a/index.html
+++ b/index.html
@@ -1,13 +1,46 @@
-          <!DOCTYPE html>
-          <html lang="en">
-          <head>
-            <meta charset="UTF-8">
-            <meta http-equiv="X-UA-Compatible" content="IE=edge">
-            <meta name="viewport" content="width=device-width, initial-scale=1.0">
-            <title>Document</title>
-          </head>
-          <body>
-    <img class="wpp" src="https://i.imgur.com/3RWnUyS.png" alt="">
-      
-          </body>
-          </html>
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Contato</title>
+  <link rel="stylesheet" type="text/css" href="styles.css">
+</head>
+<body>
+
+ <header>
+    <nav>
+      <div class="logo">
+     <img src="https://i.imgur.com/kmQEXAI.png" alt="Logo">
+      </div>
+      <ul>
+        <li><a href="#">Início</a></li>
+        <li><a href="https://mnreis.github.io/sobre/">Sobre</a></li>
+        <li><a <li> <a class="active" href="#">Contato</a></li>
+        <li><a href="https://mnreis.github.io/carrinhodecompras/">Carrinho</a></li>
+        <li><a href="https://mnreis.github.io/login/">Cadastrar</a></li>
+      </ul>
+    </nav>
+  </header>
+
+
+
+  <div class="container">
+    <img src="https://i.imgur.com/BvwDBtd.png" alt="Foto de Contato">
+    <div class="info">
+      <p>Número de telefone: <span>(41) 999-9999</span></p>
+      <p>Informações adicionais: <span>Obrigado por visitar nosso site! Estamos disponíveis para atender suas dúvidas, fornecer mais informações sobre nossos produtos e serviços, ou ajudá-lo(a) de qualquer outra forma. Não hesite em entrar em contato conosco para qualquer consulta ou solicitação. Estamos ansiosos para ouvir de você!</span></p>
+
+    </div>
+  </div>
+  <div class="slogan">
+    <p>Acesse nosso WhatsApp!</p>
+
+
+    </div>
+
+
+
+  <div class="zap">
+    <img src="https://i.imgur.com/MQyipFz.png" alt="zap">
+    </div>
+</body>
+</html>
