--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
      <img src="https://i.imgur.com/kmQEXAI.png" alt="Logo">
       </div>
       <ul>
-        <li><a href="#">Início</a></li>
+        <li><a href="https://mnreis.github.io/LOJA-H3M/">Início</a></li>
         <li><a href="https://mnreis.github.io/sobre/">Sobre</a></li>
-        <li><a <li> <a class="active" href="#">Contato</a></li>
+        <li><a <li> <a class="active" href="https://mnreis.github.io/zap/">Contato</a></li>
         <li><a href="https://mnreis.github.io/carrinhodecompras/">Carrinho</a></li>
         <li><a href="https://mnreis.github.io/login/">Cadastrar</a></li>
       </ul>
